<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingTop="10dp" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="新用户注册"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_account_hint"
        android:inputType="textEmailAddress"
        android:padding="5dp" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_password_hint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/passwordAgain"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_passwordagain_hint"
        android:inputType="textPassword"
        android:padding="5dp" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_margin="20dp"
        android:background="@drawable/register_phone_bg"
        android:hint="@string/et_name_hint"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="5dp" />

    <Button
        android:id="@+id/register_complete"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/login_btn"
        android:text="@string/register_complete"
        android:textColor="@color/whites"
        android:textSize="18sp" />

</LinearLayout>