<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <ImageView
        android:id="@+id/login_picture"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/studdy_icon" />

    <RelativeLayout
        android:id="@+id/rl_user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_picture" >

        <LinearLayout
            android:id="@+id/ll_user_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/lbs_popup_bg"
            android:orientation="vertical" >

            <lee.studdy.myview.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel" >

                <EditText
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/et_account_hint"
                    android:inputType="textEmailAddress"
                    android:nextFocusDown="@+id/password"
                    android:paddingLeft="10dp" />
            </lee.studdy.myview.FloatLabelLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/devide_line" />

            <lee.studdy.myview.FloatLabelLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                app:floatLabelTextAppearance="@style/TextAppearance.YourApp.FloatLabel" >

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_margin="2dp"
                    android:background="@android:color/transparent"
                    android:hint="@string/et_password_hint"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword"
                    android:paddingLeft="10dp" />
            </lee.studdy.myview.FloatLabelLayout>
        </LinearLayout>

        <Button
            android:id="@+id/login"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/ll_user_info"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/login"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/notlogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_below="@id/login"
            android:layout_marginLeft="25dp"
            android:layout_marginRight="25dp"
            android:layout_marginTop="10dp"
            android:background="@drawable/login_btn"
            android:text="@string/notlogin"
            android:textColor="@android:color/white" />
    </RelativeLayout>

    <Button
        android:id="@+id/register"
        android:layout_width="100dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="10dp"
        android:layout_marginRight="20dp"
        android:background="@drawable/register_user_btn"
        android:text="@string/register"
        android:textColor="@color/blue"
        android:textSize="16sp" />

</RelativeLayout>